--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "router": "^1.3.8",
+    "swiper": "^11.1.15",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
   },
