--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "image-webpack-loader": "^8.1.0",
+    "rimraf": "^6.0.1",
+    "uuid": "^11.0.3"
   },
   "eslintConfig": {
     "root": true,
