--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/gesture": "^2.0.0",
+    "@vueuse/head": "^2.0.0",
+    "@vueuse/motion": "^2.2.6",
+    "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "router": "^1.3.8",
     "swiper": "^11.1.15",
