--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "router": "^1.3.8",
     "swiper": "^11.1.15",
     "vue": "^3.2.13",
+    "vue-meta": "^3.0.0-alpha.7",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
