--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@vueuse/motion": "^2.2.6",
     "axios": "^1.7.9",
     "core-js": "^3.8.3",
+    "form-data": "^4.0.2",
+    "lottie-web": "^5.12.2",
+    "node-fetch": "^2.7.0",
     "router": "^1.3.8",
     "swiper": "^11.1.15",
     "vue": "^3.2.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-lottie": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
