--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "router": "^1.3.8",
     "swiper": "^11.1.15",
     "vue": "^3.2.13",
+    "vue-pdf-embed": "^2.1.2",
     "vue-router": "^4.4.5",
     "vue3-lottie": "^3.3.1"
   },
